# hackerspace-notify-v2

./: .gitignore  README.md  pyproject.toml
src/: main.py
